Corrected an error in response/Makefile.

--- a/response/Makefile
+++ b/response/Makefile
@@ -3,13 +3,13 @@ FC     = gfortran
 response: response.o xigar_params.o resp_matrix.o
 	$(FC) -o response response.o xigar_params.o resp_matrix.o
 
-resp_matrix.o:
+resp_matrix.o: resp_matrix.f90
 	$(FC) -c resp_matrix.f90
 
-xigar_params.o:
+xigar_params.o: ../xigar_params.f90
 	$(FC) -c ../xigar_params.f90
 
-response.o: resp_matrix.o xigar_params.o
+response.o: response.f90 resp_matrix.o xigar_params.o
 	$(FC) -c response.f90
 
 # %: %.o
@@ -22,9 +22,5 @@ response.o: resp_matrix.o xigar_params.o
 # 	$(FC) $(FCFLAGS) -c $<
 	
 clean:
-	rm -rf *.out
+	rm -rf *.o
 	rm -rf *.mod
-	rm -rf *.so
-	rm -rf *.d
-	rm -rf ./data/output/*
-	rm -rf ./data/profiles/*
