Changed copy-to-camb to use rsync instead of cp. Added nchannels2 different from nchannels. Edited parameters in params_xray.ini. Changed temperature and density profile functions in xigar to fewer parameters. Addec calcprofiles, which calculates temp and density profiles for the parameters given in xigar_params.f90 (REMEMBER TO RUN writeparams in xspec before running calcprofiles). Added fakec.tcl configuration file to generate synthetic projected spectra for use in testing the Monte Carlo. Synthetic projected spectra are generated using the shell script xspecpro.sh.

--- a/params_xray.ini
+++ b/params_xray.ini
@@ -1,9 +1,9 @@
 #Sample parameters for cosmomc in default parameterization
 
 #Root name for files produced
-file_root = test
+file_root = xigar
 
-samples = 100000
+samples = 1000000
 
 delta_loglike = 2
 
@@ -89,15 +89,15 @@ rand_seed =
 
 #parameter start center, min, max, start width, propose width
 #e.g. for 2D Gaussian
-param1 = 0 -10 10 1 1	# temp rt
-param2 = 0 -10 10 1 1	# temp a
-param3 = 0 0 0 0 0		# temp b
-param4 = 0 0 0 0 0		# temp c
-param5 = 0 0 0 0 0		# density n0
-param6 = 0 0 0 0 0		# density rc
-param7 = 0 0 0 0 0		# density alpha
-param8 = 0 0 0 0 0		# density beta
-param9 = 0 0 0 0 0		# sphvol alpha
+param1 = 5. 4.9 5.1 0.1 0.1	# critical radius
+param2 = 0.3 0.29 0.31 0.01 0.01				# temp a
+#param3 = 1 0 2 0.1 0.01						# temp b
+param3 = 0.01 0.009 0.011 0.01 0.01			# temp c
+param4 = 1.3 1.29 1.31 0.01 0.01								# density n0
+#param6 = 0.011 0.008 0.012 0.01 0.01		# density rc
+param5 = 0.9 0.8 1 0.1 0.01					# density alpha
+#param7 = 0.5 0.3 0.8 0.1 0.01				# density beta
+param6 = 1 -5 5 1 1								# sphvol alpha
 
 
 ##Unused parameters
