--- a/params_xray.ini
+++ b/params_xray.ini
@@ -3,7 +3,7 @@
 #Root name for files produced
 file_root = xigar
 
-samples = 1000000
+samples = 100000
 
 delta_loglike = 2
 
@@ -89,16 +89,39 @@ rand_seed =
 
 #parameter start center, min, max, start width, propose width
 #e.g. for 2D Gaussian
-param1 = 5. 4.9 5.1 0.1 0.1	# critical radius
-param2 = 0.3 0.29 0.31 0.01 0.01				# temp a
+param1 = 5. 4 5 0.1 0.1							# critical radius
+param2 = 0.5 -0.2 1.5 0.1 0.01				# temp a
 #param3 = 1 0 2 0.1 0.01						# temp b
-param3 = 0.01 0.009 0.011 0.01 0.01			# temp c
-param4 = 1.3 1.29 1.31 0.01 0.01								# density n0
+param3 = 5 0 10 0.1 0.01						# temp c
+param4 = 1.3 1.2 1.4 0.01 0.01				# density n0
 #param6 = 0.011 0.008 0.012 0.01 0.01		# density rc
-param5 = 0.9 0.8 1 0.1 0.01					# density alpha
+param5 = 0.9 0.7 1.1 0.1 0.01					# density alpha
 #param7 = 0.5 0.3 0.8 0.1 0.01				# density beta
-param6 = 1 -5 5 1 1								# sphvol alpha
+param6 = -1 -5 5 1 1								# sphvol alpha
 
+; #parameter start center, min, max, start width, propose width
+; #e.g. for 2D Gaussian
+; param1 = 5. 4 5 0.1 0.1	# critical radius
+; param2 = 0.3 0.2 0.4 0.01 0.01				# temp a
+; #param3 = 1 0 2 0.1 0.01						# temp b
+; param3 = 0.01 0.005 0.015 0.01 0.01			# temp c
+; param4 = 1.3 1.2 1.4 0.01 0.01				# density n0
+; #param6 = 0.011 0.008 0.012 0.01 0.01		# density rc
+; param5 = 0.9 0.7 1.1 0.1 0.01					# density alpha
+; #param7 = 0.5 0.3 0.8 0.1 0.01				# density beta
+; param6 = -1 -5 5 1 1								# sphvol alpha
+
+#parameter start center, min, max, start width, propose width
+#e.g. for 2D Gaussian
+#param1 = 5. 4.9 5.1 0.1 0.1	# critical radius
+#param2 = 0.3 0.29 0.31 0.01 0.01				# temp a
+#param3 = 1 0 2 0.1 0.01						# temp b
+#param3 = 0.01 0.009 0.011 0.01 0.01			# temp c
+#param4 = 1.3 1.29 1.31 0.01 0.01				# density n0
+#param6 = 0.011 0.008 0.012 0.01 0.01		# density rc
+#param5 = 0.9 0.8 1 0.1 0.01					# density alpha
+#param7 = 0.5 0.3 0.8 0.1 0.01				# density beta
+#param6 = -1 -5 5 1 1								# sphvol alpha
 
 ##Unused parameters
 cmb_numdatasets = 0
