This is a major commit changing the whole directory structure of Xigar. The purpose is to make a better overview of the different parts of the code. And to be able to better document it. YOU NEED TO EDIT SETTINGS.sh AND SETTINGS.tcl TO YOUR SPECIFIC SETUP! This release may be buggy! I haven't been able to test it thoroughly yet. If you have problems you can use the tag version 0.1 from github.

--- a/cosmomc/params_xray.ini
+++ b/cosmomc/params_xray.ini
@@ -3,7 +3,7 @@
 #Root name for files produced
 file_root = xigar
 
-samples = 100000
+samples = 1000
 
 delta_loglike = 2
 
@@ -89,15 +89,27 @@ rand_seed =
 
 #parameter start center, min, max, start width, propose width
 #e.g. for 2D Gaussian
-param1 = 5. 4 5 1 0.1							# critical radius
-param2 = 0.5 -0.2 1.5 0.1 0.01				# temp a
+#param1 = 3 1 9 2 0.1							# critical radius
+param1 = 5. 5. 5. 0 0							# critical radius
+
+param2 = 1.2 1.2 1.2 0 0				# temp a
+
 #param3 = 1 0 2 0.1 0.01						# temp b
-param3 = 5 0 10 5 1						# temp c
-param4 = 1.3 1.2 1.4 0.1 0.01				# density n0
+param3 = 0.01 0.01 0.01 0 0								# temp c
+
+#param4 = 1 0.5 2 1 0.1							# density n0
+param4 = 1.3 1.3 1.3 0 0							# density n0
+
 #param6 = 0.011 0.008 0.012 0.01 0.01		# density rc
-param5 = 0.9 0.7 1.1 0.1 0.01					# density alpha
+
+#param5 = 0.6 0.5 1.5 1 0.1						# density alpha
+#param5 = 0.9 0.9 0.9 0 0						# density alpha
+param5 = 1 0.5 1.5 0.5 0.1						# density alpha
+
 #param7 = 0.5 0.3 0.8 0.1 0.01				# density beta
-param6 = -1 -5 5 1 1								# sphvol alpha
+
+#param6 = 2 2 2 0 0								# sphvol alpha
+param6 = 3 1 5 2 1								# sphvol alpha
 
 ; #parameter start center, min, max, start width, propose width
 ; #e.g. for 2D Gaussian
