--- a/cosmomc/params_xray.ini
+++ b/cosmomc/params_xray.ini
@@ -3,7 +3,7 @@
 #Root name for files produced
 file_root = xigar
 
-samples = 1000
+samples = 1000000
 
 delta_loglike = 2
 
@@ -90,26 +90,41 @@ rand_seed =
 #parameter start center, min, max, start width, propose width
 #e.g. for 2D Gaussian
 #param1 = 3 1 9 2 0.1							# critical radius
-param1 = 5. 5. 5. 0 0							# critical radius
+##param1 = 0.15 0.1 0.3 0.1 0.1					# critical radius
+param1 = 0.15 0.15 0.15 0 0					# critical radius
+#param1 = 5. 5. 5. 0 0
 
-param2 = 1.2 1.2 1.2 0 0				# temp a
+##param2 = 1.0 0.5 3.0 0.1 0.1					# temp a
+param2 = 2.5 2.5 2.5 0 0							# temp a
+#param2 = 1.2 1.2 1.2 0 0
 
 #param3 = 1 0 2 0.1 0.01						# temp b
-param3 = 0.01 0.01 0.01 0 0								# temp c
+##param3 = 0.5 0.1 1.0 0.1 0.1					# temp b
+param3 = 0.7 0.7 0.7 0 0					# temp b
+#param3 = 0.01 0.01 0.01 0 0
 
 #param4 = 1 0.5 2 1 0.1							# density n0
-param4 = 1.3 1.3 1.3 0 0							# density n0
+##param4 = 1.0 1.0 1.0 0 0						# density n0
+param4 = 1.0 0.1 2. 0.1 0.1					# density n0
+#param4 = 1.3 1.3 1.3 0 0
 
 #param6 = 0.011 0.008 0.012 0.01 0.01		# density rc
 
-#param5 = 0.6 0.5 1.5 1 0.1						# density alpha
+#param5 = 0.6 0.5 1.5 1 0.1					# density alpha
 #param5 = 0.9 0.9 0.9 0 0						# density alpha
-param5 = 1 0.5 1.5 0.5 0.1						# density alpha
+##param5 = 1.0 0.1 2.0 0.1 0.1					# density alpha
+param5 = 0.8 0.8 0.8 0 0						# density alpha
+#param5 = 1 0.5 1.5 0.5 0.1
 
 #param7 = 0.5 0.3 0.8 0.1 0.01				# density beta
 
 #param6 = 2 2 2 0 0								# sphvol alpha
-param6 = 3 1 5 2 1								# sphvol alpha
+#param6 = 0.5 0 1 0 0							# sphvol alpha
+param6 = 0.0 -5.0 5.0 1 0.1						# sphvol alpha
+##param6 = -3. -3. -3. 0. 0.					# sphvol alpha
+
+param7 = 0.0 0.0 5.0 1 0.1						# sphvol beta
+##param7 = 3.0 3.0 3.0 0. 0.						# sphvol beta
 
 ; #parameter start center, min, max, start width, propose width
 ; #e.g. for 2D Gaussian
