--- a/cosmomc/params_xray.ini
+++ b/cosmomc/params_xray.ini
@@ -104,8 +104,8 @@ param3 = 0.7 0.7 0.7 0 0					# temp b
 #param3 = 0.01 0.01 0.01 0 0
 
 #param4 = 1 0.5 2 1 0.1							# density n0
-##param4 = 1.0 1.0 1.0 0 0						# density n0
-param4 = 1.0 0.1 2. 0.1 0.1					# density n0
+param4 = 1.0 1.0 1.0 0 0						# density n0
+##param4 = 1.0 0.1 2. 0.1 0.1					# density n0
 #param4 = 1.3 1.3 1.3 0 0
 
 #param6 = 0.011 0.008 0.012 0.01 0.01		# density rc
