--- a/cosmomc/params_xray.ini
+++ b/cosmomc/params_xray.ini
@@ -5,13 +5,19 @@ file_root = xigar
 
 samples = 1000000
 
-delta_loglike = 2
+delta_loglike = 0.1
 
 sampling_method = 1
 
+# Analysis
+chain_num = 0
+num_bins = 100
+num_contours= 1
+contour1 = 1
+
 estimate_propose_matrix = F
 
-propose_scale = 2.4
+propose_scale = 3.0
 
 #Temperature at which to Monte-Carlo
 temperature = 1
@@ -62,9 +68,9 @@ num_threads = 0
 #MPI mode multi-chain options (recommended)
 #MPI_Converge_Stop is a (variance of chain means)/(mean of variances) parameter that can be used to stop the chains
 #Set to a negative number not to use this feature. Does not guarantee good accuracy of confidence limits.
-MPI_Converge_Stop = 0.03
+MPI_Converge_Stop = -0.03
 #if MPI_LearnPropose = T, the proposal density is continally updated from the covariance of samples so far (since burn in)
-MPI_LearnPropose = T
+MPI_LearnPropose = F
 
 #Can optionally also check for convergence of confidence limits (after MPI_Converge_Stop  reached)
 MPI_Check_Limit_Converge = F
@@ -89,47 +95,47 @@ rand_seed =
 #parameter start center, min, max, start width, propose width
 #e.g. for 2D Gaussian
 #param1 = 3 1 9 2 0.1							# critical radius
-##param1 = 0.15 0.1 0.3 0.1 0.1					# critical radius
-param1 = 0.15 0.0 0.30 0.1 0.1					# critical radius
-#param1 = 0.15 0.15 0.15 0 0					# critical radius
+#param1 = 0.15 0.1 0.3 0.1 0.1					# critical radius
+##param1 = 0.15 0.0 0.30 0.1 0.1					# critical radius
+param1 = 0.15 0.15 0.15 0 0					# critical radius
 #param1 = 5. 5. 5. 0 0
 
-##param2 = 1.0 0.5 3.0 0.1 0.1					# temp a
-param2 = 2.5 0.0 5.0 0.1 0.1					# temp a
-#param2 = 2.5 2.5 2.5 0 0						# temp a
+#param2 = 1.0 0.5 3.0 0.1 0.1					# temp a
+##param2 = 2.5 0.0 5.0 0.1 0.1					# temp a
+param2 = 2.5 2.5 2.5 0 0						# temp a
 #param2 = 1.2 1.2 1.2 0 0
 
 #param3 = 1 0 2 0.1 0.01						# temp b
-##param3 = 0.5 0.1 1.0 0.1 0.1					# temp b
-param3 = 0.7 0.0 1.4 0.1 0.1					# temp b
-#param3 = 0.7 0.7 0.7 0 0						# temp b
+#param3 = 0.5 0.1 1.0 0.1 0.01					# temp b
+##param3 = 0.7 0.0 1.4 0.1 0.01					# temp b
+param3 = 0.7 0.7 0.7 0 0						# temp b
 #param3 = 0.01 0.01 0.01 0 0
 
 #param4 = 1 0.5 2 1 0.1							# density n0
-#param4 = 1.0 1.0 1.0 0 0						# density n0
-##param4 = 1.0 0.1 2. 0.1 0.1					# density n0
-param4 = 1.0 0.0 2.0 0.1 0.1					# density n0
+param4 = 1.0 1.0 1.0 0 0						# density n0
+#param4 = 1.0 0.1 2. 0.1 0.1					# density n0
+##param4 = 1.0 0.0 2.0 0.1 0.1					# density n0
 #param4 = 1.3 1.3 1.3 0 0
 
 #param6 = 0.011 0.008 0.012 0.01 0.01			# density rc
 
 #param5 = 0.6 0.5 1.5 1 0.1						# density alpha
 #param5 = 0.9 0.9 0.9 0 0						# density alpha
-##param5 = 1.0 0.1 2.0 0.1 0.1					# density alpha
-param5 = 0.8 0.0 1.6 0.1 0.1					# density alpha
-#param5 = 0.8 0.8 0.8 0 0						# density alpha
+#param5 = 1.0 0.1 2.0 0.1 0.1					# density alpha
+##param5 = 0.8 0.0 1.6 0.1 0.01					# density alpha
+param5 = 0.8 0.8 0.8 0 0						# density alpha
 #param5 = 1 0.5 1.5 0.5 0.1
 
 #param7 = 0.5 0.3 0.8 0.1 0.01					# density beta
 
-#param6 = 2 2 2 0 0								# sphvol alpha
-#param6 = 0.5 0 1 0 0							# sphvol alpha
-param6 = 3.0 3.0 3.0 0 0					# sphvol alpha
-##param6 = 3.0 0.0 6.0 0.1 0.1					# sphvol alpha
+param6 = 2.5 0.0 6.0 6.0 0.4					# sphvol alpha
+##param6 = 3.0 3.0 3.0 0.1 0.1					# sphvol alpha
+###param6 = 0.0 -1.0 1.0 0.1 0.01					# sphvol alpha
 #param6 = -3. -3. -3. 0. 0.						# sphvol alpha
 
-param7 = 0.5 0.5 0.5 0 0					# sphvol beta
-##param7 = 0.5 0.0 1.0 0.1 0.1					# sphvol beta
+param7 = 0.45 0.0 1.0 1.0 0.16					# sphvol beta
+##param7 = 0.5 0.5 0.5 0 0					# sphvol beta
+###param7 = 0.0 -0.5 0.5 0.1 0.01					# sphvol beta
 #param7 = 3.0 3.0 3.0 0. 0.						# sphvol beta
 
 #parameter start center, min, max, start width, propose width
