--- a/cosmomc/params_xray.ini
+++ b/cosmomc/params_xray.ini
@@ -96,25 +96,25 @@ rand_seed =
 #e.g. for 2D Gaussian
 #param1 = 3 1 9 2 0.1							# critical radius
 #param1 = 0.15 0.1 0.3 0.1 0.1					# critical radius
-##param1 = 0.15 0.0 0.30 0.1 0.1					# critical radius
-param1 = 0.15 0.15 0.15 0 0					# critical radius
+param1 = 0.1 0.0 0.30 0.3 0.03					# critical radius
+##param1 = 0.15 0.15 0.15 0 0					# critical radius
 #param1 = 5. 5. 5. 0 0
 
 #param2 = 1.0 0.5 3.0 0.1 0.1					# temp a
-##param2 = 2.5 0.0 5.0 0.1 0.1					# temp a
-param2 = 2.5 2.5 2.5 0 0						# temp a
+param2 = 1.0 0.0 5.0 5.0 0.5					# temp a
+##param2 = 2.5 2.5 2.5 0 0						# temp a
 #param2 = 1.2 1.2 1.2 0 0
 
 #param3 = 1 0 2 0.1 0.01						# temp b
 #param3 = 0.5 0.1 1.0 0.1 0.01					# temp b
-##param3 = 0.7 0.0 1.4 0.1 0.01					# temp b
-param3 = 0.7 0.7 0.7 0 0						# temp b
+param3 = 0.2 0.0 1.4 1.4 0.14					# temp b
+##param3 = 0.7 0.7 0.7 0 0						# temp b
 #param3 = 0.01 0.01 0.01 0 0
 
 #param4 = 1 0.5 2 1 0.1							# density n0
-param4 = 1.0 1.0 1.0 0 0						# density n0
+##param4 = 1.0 1.0 1.0 0 0						# density n0
 #param4 = 1.0 0.1 2. 0.1 0.1					# density n0
-##param4 = 1.0 0.0 2.0 0.1 0.1					# density n0
+param4 = 1.5 0.0 2.0 2.0 0.2					# density n0
 #param4 = 1.3 1.3 1.3 0 0
 
 #param6 = 0.011 0.008 0.012 0.01 0.01			# density rc
@@ -122,20 +122,20 @@ param4 = 1.0 1.0 1.0 0 0						# density n0
 #param5 = 0.6 0.5 1.5 1 0.1						# density alpha
 #param5 = 0.9 0.9 0.9 0 0						# density alpha
 #param5 = 1.0 0.1 2.0 0.1 0.1					# density alpha
-##param5 = 0.8 0.0 1.6 0.1 0.01					# density alpha
-param5 = 0.8 0.8 0.8 0 0						# density alpha
+param5 = 1.2 0.0 1.6 1.6 0.16					# density alpha
+##param5 = 0.8 0.8 0.8 0 0						# density alpha
 #param5 = 1 0.5 1.5 0.5 0.1
 
 #param7 = 0.5 0.3 0.8 0.1 0.01					# density beta
 
-param6 = 2.5 0.0 6.0 6.0 0.4					# sphvol alpha
+#param6 = 2.5 0.0 6.0 6.0 0.4						# sphvol alpha # Shape: b = a*(beta + alpha*a)
 ##param6 = 3.0 3.0 3.0 0.1 0.1					# sphvol alpha
-###param6 = 0.0 -1.0 1.0 0.1 0.01					# sphvol alpha
+param6 = 0.0 -1.0 1.0 2.0 0.2						# sphvol alpha # Shape: b = a/Exp(alpha*Log(a)+beta)
 #param6 = -3. -3. -3. 0. 0.						# sphvol alpha
 
-param7 = 0.45 0.0 1.0 1.0 0.16					# sphvol beta
-##param7 = 0.5 0.5 0.5 0 0					# sphvol beta
-###param7 = 0.0 -0.5 0.5 0.1 0.01					# sphvol beta
+#param7 = 0.45 0.0 1.0 1.0 0.16					# sphvol beta # Shape: b = a*(beta + alpha*a)
+##param7 = 0.5 0.5 0.5 0 0							# sphvol beta
+param7 = 0.0 -1.0 1.0 2.0 0.2						# sphvol beta # Shape: b = a/Exp(alpha*Log(a)+beta)
 #param7 = 3.0 3.0 3.0 0. 0.						# sphvol beta
 
 #parameter start center, min, max, start width, propose width
