--- a/cosmomc/params_xray.ini
+++ b/cosmomc/params_xray.ini
@@ -5,7 +5,7 @@ file_root = xigar
 
 samples = 1000000
 
-delta_loglike = 0.1
+delta_loglike = 0.001
 
 sampling_method = 1
 
@@ -17,7 +17,7 @@ contour1 = 1
 
 estimate_propose_matrix = F
 
-propose_scale = 3.0
+propose_scale = 1.0
 
 #Temperature at which to Monte-Carlo
 temperature = 1
@@ -94,49 +94,30 @@ rand_seed =
 
 #parameter start center, min, max, start width, propose width
 #e.g. for 2D Gaussian
-#param1 = 3 1 9 2 0.1							# critical radius
-#param1 = 0.15 0.1 0.3 0.1 0.1					# critical radius
-param1 = 0.1 0.0 0.30 0.3 0.03					# critical radius
+
 ##param1 = 0.15 0.15 0.15 0 0					# critical radius
-#param1 = 5. 5. 5. 0 0
+param1 = 0.155 0.0 0.3 0.075 0.01					# critical radius
 
-#param2 = 1.0 0.5 3.0 0.1 0.1					# temp a
-param2 = 1.0 0.0 5.0 5.0 0.5					# temp a
 ##param2 = 2.5 2.5 2.5 0 0						# temp a
-#param2 = 1.2 1.2 1.2 0 0
+param2 = 2.55 0.0 5.0 1.25 0.17				# temp a
 
-#param3 = 1 0 2 0.1 0.01						# temp b
-#param3 = 0.5 0.1 1.0 0.1 0.01					# temp b
-param3 = 0.2 0.0 1.4 1.4 0.14					# temp b
 ##param3 = 0.7 0.7 0.7 0 0						# temp b
-#param3 = 0.01 0.01 0.01 0 0
+param3 = 0.85 0.0 1.4 0.35 0.047					# temp b
 
-#param4 = 1 0.5 2 1 0.1							# density n0
 ##param4 = 1.0 1.0 1.0 0 0						# density n0
-#param4 = 1.0 0.1 2. 0.1 0.1					# density n0
-param4 = 1.5 0.0 2.0 2.0 0.2					# density n0
-#param4 = 1.3 1.3 1.3 0 0
+param4 = 1.05 0.0 2.0 0.5 0.067					# density n0
 
-#param6 = 0.011 0.008 0.012 0.01 0.01			# density rc
-
-#param5 = 0.6 0.5 1.5 1 0.1						# density alpha
-#param5 = 0.9 0.9 0.9 0 0						# density alpha
-#param5 = 1.0 0.1 2.0 0.1 0.1					# density alpha
-param5 = 1.2 0.0 1.6 1.6 0.16					# density alpha
 ##param5 = 0.8 0.8 0.8 0 0						# density alpha
-#param5 = 1 0.5 1.5 0.5 0.1
+param5 = 0.85 0.1 1.6 0.4 0.053					# density alpha
 
-#param7 = 0.5 0.3 0.8 0.1 0.01					# density beta
+##param6 = 0.7 0.7 1.7 0.0 0.0					# density beta
+param6 = 0.75 0.1 1.4 0.35 0.047					# density beta
 
-#param6 = 2.5 0.0 6.0 6.0 0.4						# sphvol alpha # Shape: b = a*(beta + alpha*a)
-##param6 = 3.0 3.0 3.0 0.1 0.1					# sphvol alpha
-param6 = 0.0 -1.0 1.0 2.0 0.2						# sphvol alpha # Shape: b = a/Exp(alpha*Log(a)+beta)
-#param6 = -3. -3. -3. 0. 0.						# sphvol alpha
+##param7 = 0.5 0.5 0.5 0.0 0.0					# sphvol alpha
+param7 = 0.55 -1.0 1.0 0.5 0.065						# sphvol alpha # Shape: b = a/Exp(alpha*Log(a)+beta)
 
-#param7 = 0.45 0.0 1.0 1.0 0.16					# sphvol beta # Shape: b = a*(beta + alpha*a)
-##param7 = 0.5 0.5 0.5 0 0							# sphvol beta
-param7 = 0.0 -1.0 1.0 2.0 0.2						# sphvol beta # Shape: b = a/Exp(alpha*Log(a)+beta)
-#param7 = 3.0 3.0 3.0 0. 0.						# sphvol beta
+##param8 = 0.0 0.0 0.0 0 0							# sphvol beta
+param8 = 0.05 -1.0 1.0 0.5 0.065						# sphvol beta # Shape: b = a/Exp(alpha*Log(a)+beta)
 
 #parameter start center, min, max, start width, propose width
 #e.g. for 2D Gaussian
