--- a/cosmomc/params_xray.ini
+++ b/cosmomc/params_xray.ini
@@ -95,29 +95,45 @@ rand_seed =
 #parameter start center, min, max, start width, propose width
 #e.g. for 2D Gaussian
 
-##param1 = 0.15 0.15 0.15 0 0					# critical radius
-param1 = 0.155 0.0 0.3 0.075 0.01					# critical radius
+# Range: 0.3
+#param1 = 0.15 0.15 0.15 0 0				# critical radius
+param1 = 0.12 0.0 0.3 0.06 0.03				# critical radius
+#param1 = 0.12 0.0 0.3 0.15 0.15			# critical radius
 
-##param2 = 2.5 2.5 2.5 0 0						# temp a
-param2 = 2.55 0.0 5.0 1.25 0.17				# temp a
+# Range: 5
+#param2 = 2.5 2.5 2.5 0 0					# temp a
+param2 = 2.2 0.0 5.0 1.0 0.5				# temp a
+#param2 = 2.2 0.0 5.0 2.5 2.5				# temp a
 
-##param3 = 0.7 0.7 0.7 0 0						# temp b
-param3 = 0.85 0.0 1.4 0.35 0.047					# temp b
+# Range: 1.4
+#param3 = 0.7 0.7 0.7 0 0					# temp b
+param3 = 0.5 0.0 1.4 0.3 0.14				# temp b
+#param3 = 0.5 0.0 1.4 0.7 0.7				# temp b
 
-##param4 = 1.0 1.0 1.0 0 0						# density n0
-param4 = 1.05 0.0 2.0 0.5 0.067					# density n0
+# Range: 2
+#param4 = 1.0 1.0 1.0 0 0					# density n0
+param4 = 1.2 0.0 2.0 0.4 0.2				# density n0
+#param4 = 1.2 0.0 2.0 1.0 1.0				# density n0
 
-##param5 = 0.8 0.8 0.8 0 0						# density alpha
-param5 = 0.85 0.1 1.6 0.4 0.053					# density alpha
+# Range: 1.6
+#param5 = 0.8 0.8 0.8 0 0					# density alpha
+param5 = 0.6 0.1 1.6 0.3 0.16				# density alpha
+#param5 = 0.6 0.1 1.6 1.2 1.2				# density alpha
 
-##param6 = 0.7 0.7 1.7 0.0 0.0					# density beta
-param6 = 0.75 0.1 1.4 0.35 0.047					# density beta
+# Range: 1.4
+#param6 = 0.7 0.7 1.7 0.0 0.0				# density beta
+param6 = 0.9 0.1 1.4 0.3 0.14				# density beta
+#param6 = 0.9 0.1 1.4 0.7 0.7				# density beta
 
-##param7 = 0.5 0.5 0.5 0.0 0.0					# sphvol alpha
-param7 = 0.55 -1.0 1.0 0.5 0.065						# sphvol alpha # Shape: b = a/Exp(alpha*Log(a)+beta)
+# Range: 2
+#param7 = 0.5 0.5 0.5 0.0 0.0				# sphvol alpha
+param7 = 0.3 -1.0 1.0 0.4 0.2				# sphvol alpha # Shape: b = a/Exp(alpha*Log(a)+beta)
+#param7 = 0.3 -1.0 1.0 1.0 1.0				# sphvol alpha # Shape: b = a/Exp(alpha*Log(a)+beta)
 
-##param8 = 0.0 0.0 0.0 0 0							# sphvol beta
-param8 = 0.05 -1.0 1.0 0.5 0.065						# sphvol beta # Shape: b = a/Exp(alpha*Log(a)+beta)
+# Range: 2
+#param8 = 0.0 0.0 0.0 0 0					# sphvol beta
+param8 = 0.0 -1.0 1.0 0.4 0.2				# sphvol beta # Shape: b = a/Exp(alpha*Log(a)+beta)
+#param8 = 0.0 -1.0 1.0 1.0 1.0				# sphvol beta # Shape: b = a/Exp(alpha*Log(a)+beta)
 
 #parameter start center, min, max, start width, propose width
 #e.g. for 2D Gaussian
